READMEに操作方法、制限事項を記載

--- a/README
+++ b/README
@@ -1,13 +1,40 @@
 ◆opUploadFilePlugin概要
-ファイルのアップロードを行うプラグイン。
+ファイルのアップロード・ダウンロードを行うプラグイン。
 
 ◆インストール
 /plugins/に設置
 
 ◆プラグイン設定
+・管理画面->プラグイン設定->スキンプラグイン設定にてopSkinUnitedPluginを選択。
+・管理画面->上級者向け設定->JSON API使用設定にて「使用する」を選択。
+・管理画面->デザイン設定->ガジェット設定->サイドバナーガジェット設定->ガジェットを追加->FileUploadメニューを追加。
+・MySQLの設定ファイル(my.cnf)の「max allowed packet」とPHPの設定ファイル(php.ini)の「upload_max_filesize」にアップロードファイルの最大サイズを設定。
 
 ◆操作方法
-管理画面からFileUploadメニューガジェット追加
+・アップロード
+　SNSログイン後、右上に表示されるアイコンをクリックし、アップロードリンクをクリック
+　表示されるダイアログにてアップロードするファイルを選択してアップロードボタンをクリック
+・ダウンロード
+　SNSログイン後、右上に表示されるアイコンをクリックするとアップロード済みファイルの一覧が表示されるのでファイル名をクリックする。
+・ダウンロード用リンクの取得
+　SNSログイン後、右上に表示されるアイコンをクリックするとアップロード済みファイルの一覧が表示されるのでファイル名を右クリックしリンク先URLを取得する。
+　アップロード完了時に表示されるダウンロード用リンクを取得しておく。
+
+◆制限事項
+・アップロードアイコンを表示するためにopSkinUnitedPluginが必要。
+・ファイルのサイズが0の場合、アップロードはできるがダウンロードができない。
+・ファイルサイズ最大値の設定は以下の二カ所で行う。
+　　MySQLの設定ファイル(my.cnf)の「max allowed packet」
+　　PHPの設定ファイル(php.ini)の「upload_max_filesize」
+・設定されているファイルサイズの最大値を超えるファイルをアップロードできません。
+・ファイル名に以下の文字が含まれている場合、「-(ハイフン)」に変換します。
+　\, /, *, :, ?, ", >, <, undefined, |
+
+◆追加予定機能
+・ファイルサイズチェック
+　アップロード時にファイルサイズをチェックして画面に警告を表示する。
+・ファイル名の制限を強化
+　javascriptでevalされても問題のないように。
 
 ◆配布方法の注意
 githubでは、app.ymlを提供していない。
