(refs #1065)ファイル名変換の修正
DBインサート時にいったんURLデコードするように変更し、READMEおよびユーザーズガイドに変換文字列に&と"が含まれていなかったため追記しま
した。

--- a/README
+++ b/README
@@ -28,7 +28,8 @@
 　　PHPの設定ファイル(php.ini)の「upload_max_filesize」
 ・設定されているファイルサイズの最大値を超えるファイルをアップロードできません。
 ・ファイル名に以下の文字が含まれている場合、「-(ハイフン)」に変換します。
-　\, /, *, :, ?, ", >, <, undefined, |
+　\, /, *, :, ?, &, ', ", >, <, undefined, |
+・ファイル名に4バイト文字等のDBで使用できない文字が含まれている場合、その文字は削除されます。
 
 ◆追加予定機能
 ・ファイルサイズチェック
